--- a/role.yaml
+++ b/role.yaml
@@ -13,8 +13,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 # You need to already have a Role named "pod-reader" in that namespace.
 kind: RoleBinding
 metadata:
-  name: roboshop
-  namespace: roboshop-trainee
+  name: roboshop-trainee
+  namespace: roboshop
 subjects:
 # You can specify more than one "subject"
 - kind: User
