--- a/role.yaml
+++ b/role.yaml
@@ -6,14 +6,29 @@ metadata:
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"] # nouns
-  verbs: ["get", "watch", "list"] # verbs
+  verbs: ["get", "watch", "list",]
+--- 
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: roboshop
+  name: roboshop-junior
+rules:
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["pods"] # nouns
+  verbs: ["get", "watch", "list","create"]
+- apiGroups: ["apps"]
+  # at the HTTP level, the name of the resource for accessing Deployment
+  # objects is "deployments"
+  resources: ["deployments"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 # This role binding allows "jane" to read pods in the "default" namespace.
 # You need to already have a Role named "pod-reader" in that namespace.
 kind: RoleBinding
 metadata:
-  name: roboshop-trainee
+  name: jane
   namespace: roboshop
 subjects:
 # You can specify more than one "subject"
@@ -23,6 +38,6 @@ subjects:
 roleRef:
   # "roleRef" specifies the binding to a Role / ClusterRole
   kind: Role #this must be Role or ClusterRole
-  name: roboshop-trainee # this must match the name of the Role or ClusterRole you wish to bind to
+  name: roboshop-junior # this must match the name of the Role or ClusterRole you wish to bind to
   apiGroup: rbac.authorization.k8s.io
 
