--- a/role.yaml
+++ b/role.yaml
@@ -24,6 +24,16 @@ rules:
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: roboshop
+  name: roboshop-lead
+rules:
+- apiGroups: ["*"] # "" indicates the core API group
+  resources: ["*"] # nouns
+  verbs: ["*"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
 # This role binding allows "jane" to read pods in the "default" namespace.
 # You need to already have a Role named "pod-reader" in that namespace.
 kind: RoleBinding
@@ -38,6 +48,6 @@ subjects:
 roleRef:
   # "roleRef" specifies the binding to a Role / ClusterRole
   kind: Role #this must be Role or ClusterRole
-  name: roboshop-junior # this must match the name of the Role or ClusterRole you wish to bind to
+  name: roboshop-lead # this must match the name of the Role or ClusterRole you wish to bind to
   apiGroup: rbac.authorization.k8s.io
 
